--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     <div class="container">
         <h1>第一平台測試頁面</h1>
         <div class="description">
-            <p>這是第一個測試頁面，使用livechat8，打專員或專人就可以轉到專人服務</p>
+            <p>這是第一個測試頁面，使用eason Test，打專員或專人就可以轉到專人服務</p>
             <br>
             <p>背景使用了從深藍到紫色的漸層效果，營造出科技感和專業感。文字採用白色配色，確保良好的可讀性。整體設計注重用戶體驗，在不同螢幕尺寸下都能完美顯示。</p>
         </div>
     </div>
     <div id="firstline-livechat-app"></div>
-    <script id="firstline-livechat-script" src="https://hcrm.hcrm.com.tw/livechat.385798ba-ce10-41cc-acb6-f1c26728a026.js"></script>
+<script id="firstline-livechat-script" src="https://hcrm.hcrm.com.tw/livechat.1d1139d8-218f-40ef-a286-652a5ece2a47.js"></script>
 </body>
 </html>
